# esp-wifi-provisioning

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: publish.yaml
esp-wifi-provisioning/: Cargo.toml  README.md  build.rs
esp-wifi-provisioning/src/: ap.rs  dns.rs  error.rs  lib.rs  nvs.rs  portal.rs  wifi.rs
esp-wifi-provisioning/src/web/: app.js  index.html  style.css
example/: Cargo.toml
example/src/: main.rs
src/: ap.rs  error.rs  lib.rs  portal.rs  wifi.rs
src/web/: app.js  index.html
