[workspace]
members = [
    "esp-wifi-provisioning",
    "example",
]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[workspace.dependencies]
log = "0.4"
esp-idf-svc = { version = "^0.51", features = ["std", "binstart"] }
esp-idf-hal = { version = "^0.45", features = ["rmt-legacy"] }
embuild = "0.33"
